tests/ui/delegation/generics/impl-trait-wrong-args-count.stderr
error[E0049]: method `bar4` has 0 type parameters but its trait declaration has 3 type parameters
  --> $DIR/impl-trait-wrong-args-count.rs:35:21
   |
LL |     fn bar4<X, Y, Z>(&self) {}
   |             -  -  -
   |             |
   |             expected 3 type parameters
...
LL |     reuse to_reuse::bar2::<i32, i32, i32, i32, i32, i32, 123, true> as bar4;
   |                     ^^^^ found 0 type parameters

error[E0107]: function takes at most 2 generic arguments but 3 generic arguments were supplied
  --> $DIR/impl-trait-wrong-args-count.rs:23:21
   |
LL |     fn bar<'x: 'x, 'y: 'y, AA, BB, const NN: usize>(&self) {}
   |                                  ----------------- help: remove the unnecessary generic argument
...
LL |     reuse to_reuse::bar;
   |                     ^^^ expected at most 2 generic arguments
   |
note: function defined here, with at most 2 generic parameters: `A`, `B`
  --> $DIR/impl-trait-wrong-args-count.rs:5:12
   |
LL |     pub fn bar<'a: 'a, 'b: 'b, A, B>(x: &super::XX) {}
   |            ^^^                 -  -

error[E0107]: function takes 0 generic arguments but 3 generic arguments were supplied
  --> $DIR/impl-trait-wrong-args-count.rs:26:21
   |
LL |     reuse to_reuse::bar1;
   |                     ^^^^ expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/impl-trait-wrong-args-count.rs:6:12
   |
LL |     pub fn bar1(x: &super::XX) {}
   |            ^^^^

error[E0284]: type annotations needed
  --> $DIR/impl-trait-wrong-args-count.rs:29:21
   |
LL |     reuse to_reuse::bar2;
   |                     ^^^^ cannot infer the value of the const parameter `X` declared on the function `bar2`
   |
note: required by a const generic parameter in `bar2`
  --> $DIR/impl-trait-wrong-args-count.rs:7:35
   |
LL |     pub fn bar2<A, B, C, D, E, F, const X: usize, const Y: bool>(x: &super::XX) {}
   |                                   ^^^^^^^^^^^^^^ required by this const generic parameter in `bar2`
help: consider specifying the generic arguments
   |
LL |     reuse to_reuse::bar2::<A, B, C, D, E, F, X, Y>;
   |                         ++++++++++++++++++++++++++

error[E0284]: type annotations needed
  --> $DIR/impl-trait-wrong-args-count.rs:29:21
   |
LL |     reuse to_reuse::bar2;
   |                     ^^^^ cannot infer the value of the const parameter `Y` declared on the function `bar2`
   |
note: required by a const generic parameter in `bar2`
  --> $DIR/impl-trait-wrong-args-count.rs:7:51
   |
LL |     pub fn bar2<A, B, C, D, E, F, const X: usize, const Y: bool>(x: &super::XX) {}
   |                                                   ^^^^^^^^^^^^^ required by this const generic parameter in `bar2`
help: consider specifying the generic arguments
   |
LL |     reuse to_reuse::bar2::<A, B, C, D, E, F, X, Y>;
   |                         ++++++++++++++++++++++++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0049, E0107, E0284.
For more information about an error, try `rustc --explain E0049`.
